scripts/logFile.txt
In file included from ./klee/tools/klee/convertedFile.cpp:1:
In file included from ./libc++-install-10/include/c++/v1/cassert:19:
./libc++-install-10/include/c++/v1/__config:1198:2: error: _LIBCPP_HAS_NO_THREADS cannot be set when __STDCPP_THREADS__ is set.
#error _LIBCPP_HAS_NO_THREADS cannot be set when __STDCPP_THREADS__ is set.
 ^
In file included from ./klee/tools/klee/convertedFile.cpp:3:
./libc++-install-10/include/c++/v1/types.h:8:10: fatal error: 'boost/multiprecision/cpp_int.hpp' file not found
#include <boost/multiprecision/cpp_int.hpp>
         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2 errors generated.
